@@ -1,6 +1,6 @@
 Package: phyloseq
-Version: 1.5.3
-Date: 2013-04-16
+Version: 1.5.5
+Date: 2013-04-22
 Title: Handling and analysis of high-throughput microbiome
     census data.
 Description: phyloseq provides a set of classes and tools
