@@ -145,7 +145,12 @@ hr {
 
 <h1><a href="http://joey711.github.com/phyloseq/">phyloseq</a></h1>
 
-<p>The phyloseq project has a number of supporting online resources, most of which can by found at <a href="http://joey711.github.com/phyloseq/">the phyloseq home page</a>, or from the phyloseq stable release <a href="http://bioconductor.org/packages/release/bioc/html/phyloseq.html">page on Bioconductor</a>.</p>
+<h2>Latest peer-reviewed article about phyloseq</h2>
+
+<p><strong>phyloseq: An R package for reproducible interactive analysis and graphics of microbiome census data</strong> (2013) PLoS ONE 8(4):e61217
+<a href="http://dx.plos.org/10.1371/journal.pone.0061217">http://dx.plos.org/10.1371/journal.pone.0061217</a></p>
+
+<p>The phyloseq project also has a number of supporting online resources, most of which can by found at <a href="http://joey711.github.com/phyloseq/">the phyloseq home page</a>, or from the phyloseq stable release <a href="http://bioconductor.org/packages/release/bioc/html/phyloseq.html">page on Bioconductor</a>.</p>
 
 <p>To post feature requests or ask for help, try <a href="https://github.com/joey711/phyloseq/issues">the phyloseq Issue Tracker</a>.</p>
 
